# kimm_gen3_mechmind

dynamixel-workbench/dynamixel_workbench_controllers/config/: kimm.yaml
dynamixel-workbench/dynamixel_workbench_controllers/launch/: dynamixel_controllers.launch
kimm_aruco/aruco/: CMakeLists.txt
kimm_aruco/kimm_aruco/: CMakeLists.txt  package.xml
kimm_aruco/kimm_aruco/include/kimm_aruco/: aruco_ros_utils.h
kimm_aruco/kimm_aruco/launch/: double.launch  kimm_aruco_publisher.launch  single.launch
kimm_aruco/kimm_aruco/rviz/: kimm_aruco_rviz.rviz
kimm_aruco/kimm_aruco/src/: aruco_ros_utils.cpp  kimm_multiple.cpp  marker_publish.cpp  simple_double.cpp  simple_single.cpp
kimm_gen3_assembly/: CMakeLists.txt  package.xml
kimm_gen3_assembly/include/kimm_gen3_assembly/: kimm_gen3_assembly_v1.hpp
kimm_gen3_assembly/launch/: kimm_gen3_assembly_v1.launch  kimm_gen3_pinocchio_sim.launch
kimm_gen3_assembly/src/: kimm_gen3_assembly_v1.cpp  kimm_gen3_pinocchio_sim.cpp
kimm_gen3_pnp/: CMakeLists.txt  package.xml
kimm_gen3_pnp/include/kimm_gen3_pnp/: kimm_gen3_pnp_v1.hpp
kimm_gen3_pnp/launch/: kimm_gen3_pnp_v1.launch
kimm_gen3_pnp/rviz/: gen3_rviz.rviz
kimm_gen3_pnp/script/: vision_test.py
kimm_gen3_pnp/src/: kimm_gen3_pnp_v1.cpp
robot_description/myrobot_description/6dof/: GEN3-6DOF_VISION_URDF_ARM_V01.urdf  GEN3-6DOF_VISION_URDF_ARM_V01.xml  gen3_robotiq_2f_85_d435.xacro  kinova_arm_6dof.xml
tcp_ros/: CMakeLists.txt  package.xml
tcp_ros/include/tcp_ros/: coordinate.h  parser.h  status_code.h  tcp_client.h  tcp_server.h
tcp_ros/ini/: mech_mind.ini  rs_d435.ini  rs_d455.ini
tcp_ros/launch/: tcp_client.launch  tcp_server.launch
tcp_ros/msg/: Feedback.msg  GetResult.msg  Position.msg  Recipe.msg  Status.msg  Trigger.msg
tcp_ros/script/: test_client.py  test_client2.py  test_tf.py
tcp_ros/src/: coordinate.cpp  parser.cpp  tcp_client.cpp  tcp_server.cpp
